--- a/css/content.css
+++ b/css/content.css
@@ -234,14 +234,14 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 }
 /* page title of all content pages */
 .content main h2{
+	font-size: 1.8rem;
 	font-variant: small-caps;
-	line-height: 1.75rem;
+	line-height: 2rem;
 	color: #242424;
-	margin: .5rem auto 0;
+	margin: 1rem auto;
 }
 @media only screen and (min-width: 480px){
 	.content main h2{
-		font-size: 1.8rem;
 		line-height: 2.25rem;
 	}
 }
@@ -249,7 +249,6 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 	.content main h2{
 		font-size: 2.6rem;
 		line-height: 3rem;
-		margin: .5rem auto;
 	}
 }
 /* .content.lesson-plans main h2,
