finish content.css update

--- a/css/content.css
+++ b/css/content.css
@@ -235,13 +235,12 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 /* page title of all content pages */
 .content main h2{
 	font-size: 1.8rem;
-	text-transform: uppercase;
 	line-height: 2rem;
 	color: #242424;
-	border-bottom: 1px solid #242424;
-	margin: 1rem auto 2.5rem;
-	width: max-content;
-	padding-bottom: .5rem;
+	margin: 1rem auto;
+}
+.content main h2#error404{
+	font-size: 2.5rem;
 }
 @media only screen and (min-width: 480px){
 	.content main h2{
@@ -251,10 +250,12 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 @media only screen and (min-width: 768px){
 	.content main h2{
 		font-size: 2.6rem;
-		line-height: 3rem;
+		line-height: 3.5rem;
+	}
+	.content main h2#error404{
+		font-size: 3rem;
 	}
 }
-/* rem */
 /* subsection title */
 .content main h3{
 	font-size: 1.4rem;
@@ -336,7 +337,7 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 }
 /* container for "Contact" text (part of email hyperlink in "Production Details" section) */
 .content main .specs .specs-container a.mail span{
-	font-size: .9rem;
+	font-size: 1rem;
 	text-decoration: underline;
 }
 /* lists, items, and incremental numbering for "Lesson Plan Cluster Production Details" sections (variant of "Production Details" section) */
@@ -346,6 +347,7 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 	display: inline;
 	counter-reset: items;
 }
+/* adds space in items in list, e.g., lesson plan pages */
 .content .cluster-details div ol li{
 	margin-right: .25rem;
 	display: inline;
@@ -365,7 +367,7 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 }
 /* ordered list of subsections in content page menu */
 .content ol.menu{
-	font-size: .9rem;
+	font-size: 1rem;
 	margin: 1rem auto 0;
 	padding-left: 1.2rem;
 	display: inline-block;
@@ -382,11 +384,11 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 }
 /* various kinds of lists */
 .content section ul#topic-list{
-	padding: 0 0 1.2rem;
+	padding: 0 0 0 1.2rem;
 }
 .content.about section ul{
 	list-style: none;
-	margin: 1.5rem;
+	margin: 2rem;
 	padding: 0;
 }
 .content.about.values section ul{
@@ -412,7 +414,6 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 }
 @media only screen and (min-width: 480px){
 	.content.about.founders section p img{
-		margin: .5rem .75rem 0 0;
 		width: 50%;
 		float: left;
 		display: inline;
@@ -438,7 +439,7 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 }
 /* annotations for list items (only found on lesson plan pages in the "africa" and "east_asia" clusters) */
 .content .annotation{
-	font-size: .9rem;
+	font-size: 1rem;
 	margin: .25rem 0 0 1.5rem;
 	display: block;
 }
