--- a/css/style.css
+++ b/css/style.css
@@ -922,7 +922,7 @@ hr{
 	border-left: 11px solid #5378ac;
 	margin: 1.5rem auto;
 }
-/* endnote lists; currently only used on /html/syllabi/capital-l_literature.html */
+/* endnote lists */
 .endnotes{
 	padding: 0 0 0 1rem;
 }
