--- a/css/cluster.css
+++ b/css/cluster.css
@@ -242,10 +242,11 @@
 /* some specs below derive from Livingstone Online level two slides; see, e.g., https://livingstoneonline.org/spectral-imaging */
 .cluster main section div span{
 	font-size: 1.15rem;
+	line-height: 1.5rem;
 	color: #fff;
 	background-color: rgb(66,66,66);
 	text-align: center;
-	padding: .3rem 0;
+	padding: .3rem .2rem;
 	width: 100%;
 	/* min-height: 20%; */
 	position: absolute;
