--- a/css/index.css
+++ b/css/index.css
@@ -98,7 +98,7 @@
 }
 /* text for for cluster page tiles */
 .section-tiles ul li a span{
-	font-family: 'Noto Serif', serif;
+	font-family: 'Source Serif Pro', serif;
 	font-weight: 600;
 	white-space: nowrap;
 	border: 3px solid #fff;
