--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ nav#nav1 a:focus .current{
 /* styles for entire site */
 :root{
 	font-family: 'Source Sans Pro', sans-serif;
-	font-weight: normal;
+	font-weight: 400;
 	line-height: 2rem;
 	color: #212119;
 }
