--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ html{
 }
 /* main container for body of html pages */
 body{
-	font-size: 1.1rem;
+	/* font-size: 1.1rem; */
 	margin: 0 auto;
 	padding: 0;
 	width: 100%;
@@ -213,7 +213,7 @@ main section ul{
 }
 /* main container for the footer */
 footer{
-	font-size: 1rem;
+	/* font-size: 1rem; */
 	text-align: center;
 	color: #fff;
 	background: #2e2e2e;
@@ -292,7 +292,7 @@ footer p .site-detail a:visited span{
 /* "skip to main content" tab */ 
 /* adapted from https://webaim.org/techniques/skipnav/ */
 #nav0 a{
-	font-size: 1rem;
+	/* font-size: 1rem; */
 	color: #fff;
 	background-color: rgb(66,66,66);
 	border-right: 2px solid #fff;
@@ -404,7 +404,7 @@ nav#fallback-nav li:nth-child(2){
 /* site logo */
 nav#nav1 h1,
 nav#fallback-nav h1{
-	font-size: 1.2rem;
+	/* font-size: 1.2rem; */
 	white-space: nowrap;
 	border: 2px solid transparent;
 	margin-top: 2px;
@@ -413,13 +413,13 @@ nav#fallback-nav h1{
 @media only screen and (min-width: 480px){
 	nav#nav1 h1,
 	nav#fallback-nav h1{
-		font-size: 1.6rem;
+		/* font-size: 1.6rem; */
 	}
 }
 @media only screen and (min-width: 768px){
 	nav#nav1 h1,
 	nav#fallback-nav h1{
-		font-size: 2rem;
+		/* font-size: 2rem; */
 	}
 }
 nav#nav1 a:hover h1,
@@ -440,7 +440,7 @@ nav#nav1 ul li:not(:first-child):not(:last-child){
 }
 @media only screen and (min-width: 1200px){
 	nav#nav1 ul li:not(:first-child):not(:last-child){
-		font-size: 1rem;
+		/* font-size: 1rem; */
 		font-weight: 600;
 		display: block;
 		visibility: visible;
@@ -514,19 +514,18 @@ nav#fallback-nav li button:focus-within{
 /* hamburger menu icon; actual icon provided by FontAwesome */
 nav#nav1 li button i,
 nav#fallback-nav li button i{
-	font-size: 1.3rem;
-	color: #242424;
+	/* font-size: 1.3rem; */
 }
 @media only screen and (min-width: 480px){
 	nav#nav1 li button i,
 	nav#fallback-nav li button i{
-		font-size: 1.6rem;
+		/* font-size: 1.6rem; */
 	}
 }
 @media only screen and (min-width: 768px){
 	nav#nav1 li button i,
 	nav#fallback-nav li button i{
-		font-size: 1.8rem;
+		/* font-size: 1.8rem; */
 	}
 }
 nav#nav1 li button:hover i,
@@ -627,7 +626,7 @@ nav#nav2 #overlay-menu li a:focus{
 }
 /* text container within item in overlay */
 nav#nav2 #overlay-menu ul li a span{
-	font-size: .95rem;
+	/* font-size: .95rem; */
 	font-family: 'Source Serif Pro', serif;
 	font-weight: 400;
 }
@@ -668,16 +667,16 @@ nav#nav2 #overlay-menu li button.close:focus-within{
 /* close icon ("X"); actual icon provided by FontAwesome */
 nav#nav2 #overlay-menu li button.close i{
 	color: #242424;
-	font-size: 1.3rem;
+	/* font-size: 1.3rem; */
 }
 @media only screen and (min-width: 480px){
 	nav#nav2 #overlay-menu li button.close i{
-		font-size: 1.6rem;
+		/* font-size: 1.6rem; */
 	}
 }
 @media only screen and (min-width: 768px){
 	nav#nav2 #overlay-menu li button.close i{
-		font-size: 1.8rem;
+		/* font-size: 1.8rem; */
 	}
 }
 nav#nav2 #overlay-menu li button.close:hover i,
@@ -790,15 +789,15 @@ h2, h3, h4{
 	text-align: center;
 }
 h2{
-	font-size: 1.35rem;
+	/* font-size: 1.35rem; */
 	margin: 1.25rem auto 0;
 }
 h3{
-	font-size: 1.15rem;
+	/* font-size: 1.15rem; */
 }
 h4,
 section section h4:first-child{
-	font-size: 1.05rem;
+	/* font-size: 1.05rem; */
 	font-weight: 600;
 	text-transform: uppercase;
 	margin: 1rem 0;
@@ -807,7 +806,7 @@ section h4:first-child{
 	margin-top: 1.5rem;
 }
 h5{
-	font-size: 1.05rem;
+	/* font-size: 1.05rem; */
 	font-weight: 700;
 	font-style: italic;
 	text-align: left;
@@ -818,7 +817,7 @@ h5.alternate{
 	font-style: normal;
 }
 h6{
-	font-size: 1.1rem;
+	/* font-size: 1.1rem; */
 	font-weight: 600;
 	font-style: italic;
 	margin: 0;
@@ -853,10 +852,10 @@ a:focus img{
 /* "Top" button; appears in the upper right-hand corner of the page after the user scrolls down and takes the user back to the top of the page */ 
 /* adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
 #topButton{
-	cursor: pointer;
-	font-size: .95rem;
+	/* font-size: .95rem; */
 	color: #fff;
 	background-color: #395375;
+	cursor: pointer;
 	border: 2px solid #fff;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
@@ -917,7 +916,7 @@ hr{
 }
 /* interjected sections of text that are not part of the main page content */
 .breakout-quote{
-	font-size: .95rem;
+	/* font-size: .95rem; */
 	font-family: 'Source Serif Pro', serif;
 	font-weight: 400;
 	background: #e6e6e6;
@@ -932,7 +931,7 @@ hr{
 /* adapted from https://stackoverflow.com/a/20478913 */
 .endnotes:before{
 	content:attr(aria-label);
-	font-size: 1rem;
+	/* font-size: 1rem; */
 	font-style: italic;
 	margin: 0 0 .5rem -1rem;
 	display: inline-block;
@@ -946,13 +945,13 @@ hr{
 	text-align: center;
 }
 .large{
-	font-size: 1.2rem;
+	/* font-size: 1.2rem; */
 }
 .larger{
-	font-size: 1.25rem;
+	/* font-size: 1.25rem; */
 }
 .largest{
-	font-size: 1.3rem;
+	/* font-size: 1.3rem; */
 }
 .left{
 	text-align: left;
@@ -961,13 +960,13 @@ hr{
 	text-align: right;
 }
 .small{
-	font-size: 1rem;
+	/* font-size: 1rem; */
 }
 .smaller{
-	font-size: .95rem;
+	/* font-size: .95rem; */
 }
 .smallest{
-	font-size: .9rem;
+	/* font-size: .9rem; */
 }
 .smallcaps{
 	font-variant: small-caps;
