--- a/css/timeline.css
+++ b/css/timeline.css
@@ -158,7 +158,7 @@ section section .timeline-block-left{
 }
 /* date on timeline */
 section section .timeline-content h4{
-  font-size: 1.3rem;
+  /* font-size: 1.3rem; */
   font-weight: 500;
   text-align: inherit;
   text-transform: none;
