--- a/css/youtube.css
+++ b/css/youtube.css
@@ -107,7 +107,7 @@
 }
 /* dropdown button for tab navigation to skip controls for YouTube video after starting play */
 .skipcontrols a{
-	font-size: .9rem;
+	/* font-size: .9rem; */
 	font-family: Arial, Geneva, Tahoma, sans-serif;
 	color: #395375;
 	background: #e6e6e6;
@@ -123,7 +123,7 @@
 }
 @media only screen and (min-width: 768px){
 	.skipcontrols a{
-		font-size: 1rem;
+		/* font-size: 1rem; */
 	}
 }
 .skipcontrols a{
