--- a/css/content.css
+++ b/css/content.css
@@ -235,7 +235,7 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 /* page title of all content pages */
 .content main h2{
 	/* font-size: 1.8rem; */
-	line-height: 2.2rem;
+	/* line-height: 2.2rem; */
 	color: #242424;
 	margin: 1rem auto;
 }
@@ -244,13 +244,13 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 }
 @media only screen and (min-width: 480px){
 	.content main h2{
-		line-height: 2.25rem;
+		/* line-height: 2.25rem; */
 	}
 }
 @media only screen and (min-width: 768px){
 	.content main h2{
 		/* font-size: 2.75rem; */
-		line-height: 3.5rem;
+		/* line-height: 3.5rem; */
 	}
 	.content main h2#error404{
 		/* font-size: 3rem; */
