--- a/css/cluster.css
+++ b/css/cluster.css
@@ -242,7 +242,7 @@
 /* some specs below derive from Livingstone Online level two slides; see, e.g., https://livingstoneonline.org/spectral-imaging */
 .cluster main section div span{
 	/* font-size: 1.15rem; */
-	line-height: 1.5rem;
+	/* line-height: 1.5rem; */
 	color: #fff;
 	background-color: rgb(66,66,66);
 	text-align: center;
@@ -267,7 +267,7 @@
 }
 /* the descriptive text below each zoomcasts cluster page slide image */
 .cluster.zoomcasts main section p{
-	line-height: 1.875rem;
+	/* line-height: 1.875rem; */
 	margin: 0 .5rem 1rem;
 }
 /* the list of lesson plan buttons that appears on collective lesson plan slides */
@@ -326,7 +326,7 @@
 .cluster main section ul li a:visited{
 	/* font-size: 1rem; */
 	text-decoration: none;
-	line-height: 1.75rem;
+	/* line-height: 1.75rem; */
 	color: #242424;
 	width: 100%;
 	height: 100%;
