--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ nav#nav1 a:focus .current{
 :root{
 	font-family: 'Source Sans Pro', sans-serif;
 	font-weight: 400;
-	line-height: 2rem;
+	/* line-height: 2rem; */
 	color: #212119;
 }
 /* main containter for html pages */
